zetasql/analyzer/testdata/differential_privacy_disabled.test
# Anonymization query without the feature flag turned on
[default language_features=NONE]
select with differential_privacy sum() from table;
--
ERROR: Unexpected keyword WITH [at 1:8]
select with differential_privacy sum() from table;
       ^
